k8s-128/roles/kubernetes-common/files/yamls/network-service/ingress-nginx-v1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-v1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /svr1
        backend:
          serviceName: 
          servicePort: 
      - path: /svr2
        backend:
          serviceName: 
          servicePort:
